added dependencies and test config